feat:add section type in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -8,46 +8,50 @@
   <title>Document</title>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="menu">
-        <div class="logo menu__logo"></div>
-        <!-- /.logo -->
-        <nav class="nav menu__logo">
-          <a href="#" class="nav__item">Главная</a>
-          <a href="#" class="nav__item">Проекты</a>
-          <a href="#" class="nav__item">Замер</a>
-          <a href="#" class="nav__item">Команда</a>
-          <a href="#" class="nav__item">Отзывы</a>
-          <a href="#" class="nav__item">Контакты</a>
-        </nav>
-        <!-- /.nav -->
-        <div class="contacts menu__contacts">
-          <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button contacts__button button--primary"></button>
-        </div>
-        <!-- /.contacts menu__contacts -->
-      </div>
-      <!-- /.menu -->
-    </div>
-    <!-- /.container -->
-  </header>
   <main>
-    <section class="hero">
-      <a href="#" class="instagram hero__instagram">instagram</a>
-      <div class="hero__content">
+    <section class="type">
+      <div class="type__content">
         <div class="container">
-          <h1 class="title hero__title">Турецкий ремонт в Ростове-на-дону</h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-          <button class="button hero__button button--primary">Рассчитать стоимость</button>
-          <button class="button hero__button button--outline">Отправить заявку</button>
+          <h1 class="title type__title title--main">Виды жалюзи</h1>
+          <div class="cards type__cards">
+            <div class="card type__card">
+              <img src="img/image-1.jpg" alt="image" class="img type__img img--simple">
+              <h2 class="title-card type__title-card title-card--simple"></h2>
+              <button class="button type__button button--outline">Подробнее</button>
+              <button class="button type__button button--primary">Заказать</button>
+            </div>
+            <!-- /.card type__card -->
+            <div class="card type__card">
+              <img src="img/image-2.jpg" alt="image" class="img type__img img--simple">
+              <h2 class="title-card type__title-card title-card--simple"></h2>
+              <button class="button type__button button--outline">Подробнее</button>
+              <button class="button type__button button--primary">Заказать</button>
+            </div>
+            <!-- /.card type__card -->
+            <div class="card type__card">
+                <img src="img/image-3.jpg" alt="image" class="img type__img img--simple">
+                <h2 class="title-card type__title-card title-card--simple"></h2>
+                <button class="button type__button button--outline">Подробнее</button>
+                <button class="button type__button button--primary">Заказать</button>
+              </div>
+            <!-- /.card type__card -->
+            <div class="card type__card">
+                <img src="img/image-4.jpg" alt="image" class="img type__img img--simple">
+                <h2 class="title-card type__title-card title-card--simple"></h2>
+                <button class="button type__button button--outline">Подробнее</button>
+                <button class="button type__button button--primary">Заказать</button>
+              </div>
+            <!-- /.card type__card -->
+          </div>
+          <!-- /.cards type__cards -->
+          
         </div>
         <!-- /.container -->
       </div>
-      <!-- /.hero__content -->
+      <!-- /.type__content -->
       <a href="#" class="scroll-down">листайте вниз</a>
     </section>
-    <!-- /.hero -->
+    <!-- /.type -->
   </main>
 </body>
 </html>
