choe: resaved index.html

--- a/src/index.html
+++ b/src/index.html
@@ -16,28 +16,28 @@
           <div class="cards type__cards">
             <div class="card type__card">
               <img src="img/image-1.jpg" alt="image" class="img type__img img--simple">
-              <h2 class="title-card type__title-card title-card--simple"></h2>
+              <h2 class="title-card type__title-card title-card--simple">Горизонтальные жалюзи</h2>
               <button class="button type__button button--outline">Подробнее</button>
               <button class="button type__button button--primary">Заказать</button>
             </div>
             <!-- /.card type__card -->
             <div class="card type__card">
               <img src="img/image-2.jpg" alt="image" class="img type__img img--simple">
-              <h2 class="title-card type__title-card title-card--simple"></h2>
+              <h2 class="title-card type__title-card title-card--simple">вертикальные жалюзи</h2>
               <button class="button type__button button--outline">Подробнее</button>
               <button class="button type__button button--primary">Заказать</button>
             </div>
             <!-- /.card type__card -->
             <div class="card type__card">
                 <img src="img/image-3.jpg" alt="image" class="img type__img img--simple">
-                <h2 class="title-card type__title-card title-card--simple"></h2>
+                <h2 class="title-card type__title-card title-card--simple">рулонные жалюзи</h2>
                 <button class="button type__button button--outline">Подробнее</button>
                 <button class="button type__button button--primary">Заказать</button>
               </div>
             <!-- /.card type__card -->
             <div class="card type__card">
                 <img src="img/image-4.jpg" alt="image" class="img type__img img--simple">
-                <h2 class="title-card type__title-card title-card--simple"></h2>
+                <h2 class="title-card type__title-card title-card--simple">жалюзи плиссе</h2>
                 <button class="button type__button button--outline">Подробнее</button>
                 <button class="button type__button button--primary">Заказать</button>
               </div>
