choe: resaved index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCsection html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
@@ -9,49 +9,48 @@
 </head>
 <body>
   <main>
-    <section class="type">
-      <div class="type__content">
+    <section class="section">
+      <div class="content section__content">
         <div class="container">
-          <h1 class="title type__title title--main">Виды жалюзи</h1>
-          <div class="cards type__cards">
-            <div class="card type__card">
-              <img src="img/image-1.jpg" alt="image" class="img type__img img--simple">
-              <h2 class="title-card type__title-card title-card--simple">Горизонтальные жалюзи</h2>
-              <button class="button type__button button--outline">Подробнее</button>
-              <button class="button type__button button--primary">Заказать</button>
+          <h1 class="title section__title title--main">Виды жалюзи</h1>
+          <div class="cards section__cards">
+            <div class="card section__card">
+              <img src="img/image-1.jpg" alt="image" class="img section__img img--simple">
+              <h2 class="title-card section__title-card title-card--simple">Горизонтальные жалюзи</h2>
+              <button class="button section__button button--outline">Подробнее</button>
+              <button class="button section__button button--primary">Заказать</button>
             </div>
-            <!-- /.card type__card -->
-            <div class="card type__card">
-              <img src="img/image-2.jpg" alt="image" class="img type__img img--simple">
-              <h2 class="title-card type__title-card title-card--simple">вертикальные жалюзи</h2>
-              <button class="button type__button button--outline">Подробнее</button>
-              <button class="button type__button button--primary">Заказать</button>
+            <!-- /.card section__card -->
+            <div class="card section__card">
+              <img src="img/image-2.jpg" alt="image" class="img section__img img--simple">
+              <h2 class="title-card section__title-card title-card--simple">вертикальные жалюзи</h2>
+              <button class="button section__button button--outline">Подробнее</button>
+              <button class="button section__button button--primary">Заказать</button>
             </div>
-            <!-- /.card type__card -->
-            <div class="card type__card">
-                <img src="img/image-3.jpg" alt="image" class="img type__img img--simple">
-                <h2 class="title-card type__title-card title-card--simple">рулонные жалюзи</h2>
-                <button class="button type__button button--outline">Подробнее</button>
-                <button class="button type__button button--primary">Заказать</button>
+            <!-- /.card section__card -->
+            <div class="card section__card">
+                <img src="img/image-3.jpg" alt="image" class="img section__img img--simple">
+                <h2 class="title-card section__title-card title-card--simple">рулонные жалюзи</h2>
+                <button class="button section__button button--outline">Подробнее</button>
+                <button class="button section__button button--primary">Заказать</button>
               </div>
-            <!-- /.card type__card -->
-            <div class="card type__card">
-                <img src="img/image-4.jpg" alt="image" class="img type__img img--simple">
-                <h2 class="title-card type__title-card title-card--simple">жалюзи плиссе</h2>
-                <button class="button type__button button--outline">Подробнее</button>
-                <button class="button type__button button--primary">Заказать</button>
+            <!-- /.card section__card -->
+            <div class="card section__card">
+                <img src="img/image-4.jpg" alt="image" class="img section__img img--simple">
+                <h2 class="title-card section__title-card title-card--simple">жалюзи плиссе</h2>
+                <button class="button section__button button--outline">Подробнее</button>
+                <button class="button section__button button--primary">Заказать</button>
               </div>
-            <!-- /.card type__card -->
+            <!-- /.card section__card -->
           </div>
-          <!-- /.cards type__cards -->
+          <!-- /.cards section__cards -->
           
         </div>
         <!-- /.container -->
       </div>
-      <!-- /.type__content -->
-      <a href="#" class="scroll-down">листайте вниз</a>
+      <!-- /.content section__content -->
     </section>
-    <!-- /.type -->
+    <!-- /.section -->
   </main>
 </body>
 </html>
