fix: fixed all blocks visual appearance in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
-<!DOCsection html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
   <title>Document</title>
 </head>
 <body>
@@ -17,29 +18,37 @@
             <div class="card section__card">
               <img src="img/image-1.jpg" alt="image" class="img section__img img--simple">
               <h2 class="title-card section__title-card title-card--simple">Горизонтальные жалюзи</h2>
-              <button class="button section__button button--outline">Подробнее</button>
-              <button class="button section__button button--primary">Заказать</button>
+              <div class="button-container">
+                  <button class="button section__button button--outline"><span class="center"></span>Подробнее</span></button>
+                  <button class="button section__button button--primary">Заказать</button>
+              </div>
             </div>
             <!-- /.card section__card -->
             <div class="card section__card">
               <img src="img/image-2.jpg" alt="image" class="img section__img img--simple">
               <h2 class="title-card section__title-card title-card--simple">вертикальные жалюзи</h2>
-              <button class="button section__button button--outline">Подробнее</button>
-              <button class="button section__button button--primary">Заказать</button>
+              <div class="button-container">
+                  <button class="button section__button button--outline"><span class="center">Подробнее</span></button>
+                  <button class="button section__button button--primary">Заказать</button>
+              </div>
             </div>
             <!-- /.card section__card -->
             <div class="card section__card">
                 <img src="img/image-3.jpg" alt="image" class="img section__img img--simple">
                 <h2 class="title-card section__title-card title-card--simple">рулонные жалюзи</h2>
-                <button class="button section__button button--outline">Подробнее</button>
-                <button class="button section__button button--primary">Заказать</button>
+                <div class="button-container">
+                  <button class="button section__button button--outline"><span class="center">Подробнее</span></button>
+                  <button class="button section__button button--primary">Заказать</button>
+                </div>
               </div>
             <!-- /.card section__card -->
             <div class="card section__card">
                 <img src="img/image-4.jpg" alt="image" class="img section__img img--simple">
                 <h2 class="title-card section__title-card title-card--simple">жалюзи плиссе</h2>
-                <button class="button section__button button--outline">Подробнее</button>
-                <button class="button section__button button--primary">Заказать</button>
+                <div class="button-container">
+                  <button class="button section__button button--outline"><span class="center">Подробнее</span></button>
+                  <button class="button section__button button--primary">Заказать</button>
+                </div>
               </div>
             <!-- /.card section__card -->
           </div>
